infra/k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nsp-ingress
  namespace: national-security
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.national-security.gov.ng
    secretName: nsp-tls
  rules:
  - host: api.national-security.gov.ng
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: core-api
            port:
              number: 80
